@@ -40,14 +40,20 @@ namespace Http
 unsigned char Char2Hex (unsigned char Char);
 wchar_t       Char2Hex (wchar_t Char);
 std::string   Hex2Char (unsigned char Char);
+#ifndef WSTRING_MISSING
 std::wstring  Hex2Char (wchar_t Char);
+#endif //WSTRING_MISSING
 
 //---------------------------------------------------------------------------
 // URL manipulation
 std::string URL_Encoded_Encode (const std::string& URL);
+#ifndef WSTRING_MISSING
 std::wstring URL_Encoded_Encode (const std::wstring& URL);
+#endif //WSTRING_MISSING
 std::string URL_Encoded_Decode (const std::string& URL);
+#ifndef WSTRING_MISSING
 std::wstring URL_Encoded_Decode (const std::wstring& URL);
+#endif //WSTRING_MISSING
 
 //---------------------------------------------------------------------------
 // Cleanup
